--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,23 @@
     list-style: none;
 }
 
+#layout {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
+    align-items: center;
+}
+
+#content {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-grow: 1;
+    width: 75%;
+}
+
 header {
     display: flex;
     flex-direction: row;
@@ -45,5 +62,22 @@ header {
         justify-content: center;
         align-items: center;
     }
+    a:hover{
+        background-color: #333;
+        color: #fff;
+    }
+    a:active{
+        background-color: black;
+        color: #fff;
+    }
+}
 
+footer{
+    width: 100%;
+    height: 30px;
+    background-color: #333;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
