Added some styles to the task container

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,35 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Task Tracker</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
     <div id="layout">
 
         <%- include('./partials/header.ejs') %>
-            <div id="content">
 
-                <section class="task-list" id="task-list-pending">
+        <div id="content">
+
+                <!--PENDING TASKS -->
+                <section class="content-box" id="task-list-pending">
                     <h2 class="sectionTitle">Pending Task</h2>
-                    <% let completedTask=[]; if (tasks.length> 0) { %>
-                    <% tasks.forEach(task=> {%>
-                        <%- include('./partials/taskTemplate.ejs', {task: task}) %>
-                            <%}); %>
-                        <% } else { %>
-                            <p>No pending task</p>
-                        <% } %>
-                </section>
-                <section class="task-list" id="task-list-completed">
-                    <h2 class="sectionTitle">Completed Task</h2>
-                    <% if (completedTask.length> 0){ %>
+                    <div class="task-grid">
 
-                        <% } else {%>
-                            <p>No pending task</p>
-                        <% } %>
+                        <% let completedTask=[]; if (tasks.length> 0) { %>
+                            <% tasks.forEach(task=> {%>
+                                <%- include('./partials/taskTemplate.ejs', {task: task}) %>
+                                <%}); %>
+                                <% } else { %>
+                                        <p>No pending task</p>
+                                <% } %>
+                    </div>
                 </section>
 
-            </div>
-            <%- include('./partials/footer.ejs') %>
+            <!-- COMPLETED TASKS -->
+            <section class="content-box" id="task-list-completed">
+                <h2 class="sectionTitle">Completed Task</h2>
+                <% if (completedTask.length> 0){ %>
+                    <% } else {%>
+                        <p>No pending task</p>
+                    <% } %>
+            </section>
+
+        </div>
+
+        <%- include('./partials/footer.ejs') %>
     </div>
 </body>
 
