--- a/public/new-task.css
+++ b/public/new-task.css
@@ -44,6 +44,7 @@
     margin-inline: 20px;
     flex-grow: 1;
     height: 40px;
+    width: 90%;
     padding-inline: 10px;
     font-size: larger;
 }
