--- a/views/partials/taskTemplate.ejs
+++ b/views/partials/taskTemplate.ejs
@@ -1,6 +1,40 @@
-<article>
-    <h3><%= task.title %></h3>
-    <span><%= task.category %></span>
-    <p><%= task.description %></p>
-    <p><%= task.dueTime %><%= task.dueDate %> </p>
+<a href="#">
+<article class="task-template">
+    <% let categoryColour = "background-color: "
+      switch (task.category) {
+        case 'Bar':
+          categoryColour += 'lightblue'  
+          break;
+
+        case 'Floor':
+          categoryColour += 'limegreen'
+          break;
+
+        case 'Admin':
+          categoryColour += 'pink'
+          break;
+      
+        default:
+          break;
+      }
+    %>
+
+    <!-- TITLE -->
+    <h3 class="task-title"><%= task.title %></h3>
+    
+    <!-- CATEGORY -->
+     <div  style='<%= categoryColour %>' class="task-category">
+       <span><%= task.category %></span>
+     </div>
+
+    <!-- DESCRIPTION -->
+    <p class="task-description"><%= task.description %></p>
+
+    <!-- DUE -->
+     <div class="task-due">
+       <p class="task-dueTime"><%= task.dueTime %></p>
+       <p class="task-dueDate"><%= task.dueDate %> </p>
+     </div>
+
   </article>  
+</a>
