--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,17 @@
     <h1 id="title">Task Tracker</h1>
     <nav id="navBar">
         <ul>
-            <li class="navButton"><a  href="/">Home</a></li>
-            <li class="navButton"><a href="/new-task">New Task</a></li>
+            <li class="navButton"><a  href="/">
+                <svg width="40px" height="40px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M22 12.2039V13.725C22 17.6258 22 19.5763 20.8284 20.7881C19.6569 22 17.7712 22 14 22H10C6.22876 22 4.34315 22 3.17157 20.7881C2 19.5763 2 17.6258 2 13.725V12.2039C2 9.91549 2 8.77128 2.5192 7.82274C3.0384 6.87421 3.98695 6.28551 5.88403 5.10813L7.88403 3.86687C9.88939 2.62229 10.8921 2 12 2C13.1079 2 14.1106 2.62229 16.116 3.86687L18.116 5.10812C20.0131 6.28551 20.9616 6.87421 21.4808 7.82274"/>
+                    <path d="M15 18H9"/>
+                    </svg>
+            </a></li>
+            <li class="navButton"><a href="/new-task">
+                <svg width="40px" height="40px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15 12L12 12M12 12L9 12M12 12L12 9M12 12L12 15"/>
+                    <path d="M22 12C22 16.714 22 19.0711 20.5355 20.5355C19.0711 22 16.714 22 12 22C7.28595 22 4.92893 22 3.46447 20.5355C2 19.0711 2 16.714 2 12C2 7.28595 2 4.92893 3.46447 3.46447C4.92893 2 7.28595 2 12 2C16.714 2 19.0711 2 20.5355 3.46447C21.5093 4.43821 21.8356 5.80655 21.9449 8"/>
+                    </svg>
+            </a></li>
         </ul>
 </header>
