--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,9 @@
     text-decoration: none;
     list-style: none;
 }
+a{
+    color: black;
+}
 
 #layout {
     display: flex;
@@ -28,6 +31,7 @@ header {
     flex-direction: row;
     width: 100%;
     height: 60px;
+    margin-bottom: 20px;
 }
 
 #title {
@@ -57,20 +61,24 @@ header {
         border: #333 solid 2px;
         border-radius: 10px;
         background-color: #f0f0f0;
-        color: #000;
         font-size: 20px;
         justify-content: center;
         align-items: center;
         transition: all 0.3s;
+        svg{
+            stroke: #333;
+            stroke-width: 1.5px;
+        }
     }
     a:hover{
         background-color: #333;
-        color: #fff;
         scale: 1.1;
+        svg{
+            stroke: #fff;
+        }
     }
     a:active{
         background-color: black;
-        color: #fff;
     }
 }
 
