New style in the main page Category Colours working

--- a/public/index.css
+++ b/public/index.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    background-color: #f0f0f0;
+    box-shadow: 2px 2px 2px #333;
     border: 2px #333 solid;
     border-radius: 10px;
     padding: 20px;
@@ -10,9 +12,8 @@
 }
 .task-grid{
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: flex-start;
     gap: 10px;
 }
 
@@ -26,30 +27,26 @@
 
 /* TASK TEMPLATE */
 .task-template{
-    height: 250px;
-    width: 400px;
+    background-color: #fff;
     border: #333 2px solid;
+    box-shadow: 2px 2px 2px #333;
     border-radius: 10px;
-    margin-block: 10px;
+    margin: 10px;
     display: grid;
-    padding: 10px;
-    grid-template-rows: 1fr 3fr 1fr;
-    grid-template-areas: 'TITLE TITLE CATEGORY'
-    'DESCRIPTION DESCRIPTION DESCRIPTION'
-    '. . DUE';
+    padding: 20px;
+    flex-grow: 1;
+    grid-template-areas: 'CATEGORY TITLE DUE';
+    transition: all 0.5s;
+}
+.task-template:hover{
+    box-shadow: none;
 }
 
 .task-title{
     grid-area: TITLE;
     display: flex;
-    justify-content: flex-start;
     align-items: center;
-}
-
-.task-actions{
-    grid-area: ACTIONS;
-    display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
 }
 
 .task-category{
@@ -58,7 +55,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px #333 solid;
+    border: 2px #333 solid;
     border-radius: 8px;
     padding: 8px;
     width: 80px;
@@ -69,6 +66,8 @@
     display: flex;
     flex-grow: 1;
     justify-content: flex-end;
+    align-items: center;
+    font-size: x-large;
 }
 
 .task-description{
@@ -79,24 +78,6 @@
     border: #aaa 1px solid;
 }
 
-.task-button{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 0;
-    border-radius: 5px;
-    background-color: #fff;
-    transition: all 0.3s;
-    box-shadow: 2px 2px 2px #aaa;
-    stroke: #333;
-    margin: 5px;
-}
-.task-complete:hover .icon-button path {
-    stroke: green;
-}
-.task-delete:hover .icon-button path {
-    stroke: red;
-}
 .icon-button{
     padding: 5px;
 }
