--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,10 @@
 
                 <!--PENDING TASKS -->
                 <section class="content-box" id="task-list-pending">
-                    <h2 class="sectionTitle">Pending Task</h2>
+                    <div class="task-box-header">
+                        <h2 class="sectionTitle">Pending Task</h2>
+                        <span>Today</span>
+                    </div>
                     <div class="task-grid">
 
                         <% let completedTask=[]; if (tasks && tasks.length> 0) { %>
