--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600&display=swap');
+
 * {
+    font-family: 'Open Sans', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -7,6 +10,9 @@
 }
 a{
     color: black;
+}
+h1,h2,h3,h4 {
+    font-family: 'Montserrat', sans-serif;
 }
 
 #layout {
@@ -29,9 +35,9 @@ a{
 header {
     display: flex;
     flex-direction: row;
+    align-items: center;
     width: 100%;
-    height: 60px;
-    margin-bottom: 20px;
+    height: 100px;
 }
 
 #title {
@@ -40,6 +46,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 #navBar {
