--- a/views/taskViewer.ejs
+++ b/views/taskViewer.ejs
@@ -11,7 +11,7 @@
     <div id="layout" class="color<%= task.category %>">
 
         <article class="card">
-            <button class="task-button" id="task-back">
+            <button class="task-button" id="go-back">
                 <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M3 8H16.5C18.9853 8 21 10.0147 21 12.5C21 14.9853 18.9853 17 16.5 17H3M3 8L6 5M3 8L6 11" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
@@ -48,5 +48,6 @@
             
         </article>
     </div>
+    <script type="module" src="/utils/goBack.js"></script>
 </body>
 </html>
