--- a/views/partials/taskTemplate.ejs
+++ b/views/partials/taskTemplate.ejs
@@ -1,4 +1,4 @@
-<% const category = task.category; console.log(category)%>
+<% const category = task.category%>
 <a href="/task/<%= task.id %>">
 <article class="task-template">
 
