--- a/public/calendar.css
+++ b/public/calendar.css
@@ -19,9 +19,36 @@
     padding-block: 10px;
     padding-inline: 40px;
 }
-#monthView{
+#monthLabel{
+    text-transform: capitalize;
+    margin-right: 20px;
+}
+#dayView{
     margin-block: 20px;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     grid-template-rows: repeat(5, 1fr);
+    overflow-x: scroll;
+}
+.day{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    border: 2px #333 solid;
+    padding: 5px;
+    justify-content: center;
+    font-size: 12px;
+}
+.dayTitle{
+    font-size: 32px;
+    font-weight: 700;
+}
+.task-completed, .task-late, .task-pending{
+    display: flex;
+    flex-direction: row;
+    p{
+        padding-inline: 5px;
+    }
 }
