--- a/views/calendar.ejs
+++ b/views/calendar.ejs
@@ -4,15 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calendars</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="calendar.css">
+    <title>Calendar</title>
+    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../../calendar.css">
 </head>
 
 <body>
     <div id="layout">
         <%- include("./partials/header.ejs") %>
+
             <div id="content">
+                <% today = date
+                const month = today.toLocaleString('default', {month: 'long'}) 
+                const year = today.getFullYear()%>
+
+                <!-- MONTHPICKER -->
                 <section id="monthPicker">
                     <button class="monthArrow" id="previousMonth">
                         <svg width="40px" height="40px" viewBox="0 0 24 24" fill="none"
@@ -22,8 +28,8 @@
                         </svg>
                     </button>
                     <div id="currentDate">
-                        <h2 id="monthLabel">Month</h2>
-                        <h2 id="yearLabel">Year</h2>
+                        <h2 id="monthLabel"><%= month %></h2>
+                        <h2 id="yearLabel"><%= year %></h2>
                     </div>
                     <button class="monthArrow" id="nextMonth">
                         <svg width="40px" height="40px" viewBox="0 0 24 24" fill="none"
@@ -33,7 +39,33 @@
                         </svg>
                     </button>
                 </section>
-                <section id="monthView">
+
+                <!-- DAY VIEW -->
+                <section id="dayView">
+                    <%  %>
+                    <div class="day">
+                        <p class="dayTitle">01</p>
+                        <div class="task-completed">
+                            <svg width="18px" height="18px" viewBox="0 0 24 24" fill="limegreen" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                            <p><span>10</span> Done</p>
+                        </div>
+
+                        <div class="task-late">
+                            <svg width="18px" height="18px" viewBox="0 0 24 24" fill="yellow" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                            <p><span>10</span> Late</p>
+                        </div>
+
+                    <div class="task-pending">
+                        <svg width="18px" height="18px" viewBox="0 0 24 24" fill="gray" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        <p><span>10</span> Pending</p>
+                    </div>
+                    </div>
                 </section>
             </div>
             <%- include("./partials/footer.ejs") %>
