--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header>
-    <h1 id="title">Task Tracker</h1>
+    <a href="/"><h1 id="title">Task Tracker</h1></a>
     <nav id="navBar">
         <ul>
             <li class="navButton"><a  href="/">
