--- a/public/calendar.css
+++ b/public/calendar.css
@@ -25,10 +25,12 @@
 }
 #dayView{
     margin-block: 20px;
+    gap: 10px;
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     grid-template-rows: repeat(5, 1fr);
-    overflow-x: scroll;
+    overflow-y: scroll;
 }
 .day{
     display: flex;
